@@ -8,7 +8,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
@@ -52,42 +51,69 @@ public class ArmazemService {
     // MAPEAMENTO: Opções do formulário → Itens do armazém
     // =====================================================================
 
+    private static final String KEY_TRACKED = "tracked";
+    private static final String STATUS_BAIXO = "BAIXO";
+
+    private static final String VAL_CHAMPO = "Champô";
+    private static final String VAL_GEL_BANHO = "Gel de Banho";
+    private static final String VAL_TOALHA = "Toalha";
+    private static final String VAL_SABONETE_CREME = "Sabonete/Creme";
+    private static final String VAL_LAVAR_SECA = "Lavar Roupa Seca";
+    private static final String VAL_LAVAR_MOLHADA = "Lavar Roupa Molhada";
+    private static final String VAL_ROUPA_INTERIOR = "Roupa Interior";
+    private static final String VAL_MEIAS = "Meias";
+    private static final String VAL_AGASALHO = "Agasalho/Casaco";
+    private static final String VAL_DETERGENTE = "Detergente Roupa";
+    private static final String VAL_TSHIRT = "T-shirt/Camisola";
+    private static final String VAL_CALCAS = "Calças";
+
+    private static final String CAT_HIGIENE = "HIGIENE";
+    private static final String CAT_DETERGENTES = "DETERGENTES";
+    private static final String CAT_VESTUARIO = "VESTUARIO";
+    private static final String CAT_CALCADO = "CALCADO";
+    private static final String BRAND_GENERATIVE = "Generative";
+    private static final String STATUS_OK = "OK";
+    private static final String UNIT_UN = "un";
+    private static final String UNIT_PARES = "pares";
+    private static final String UNIT_L = "L";
+    private static final String BRAND_STANDARD = "Standard";
+
     /**
      * Mapeia a categoria do formulário (Roupa.categoria) para o nome do item no armazém.
      * Para calçado, o mapeamento é feito pelo tamanho (Roupa.tamanho → ItemArmazem.nome).
      */
     private static final Map<String, String> FORM_TO_ARMAZEM = Map.ofEntries(
-        Map.entry("Shampoo", "Champô"),
-        Map.entry("Champô", "Champô"),
-        Map.entry("Gel de Banho", "Gel de Banho"),
-        Map.entry("Toalha", "Toalha"),
-        Map.entry("Sabonete/Creme", "Sabonete/Creme"),
-        Map.entry("Lavar Roupa Seca", "Detergente Roupa"),
-        Map.entry("Lavar Roupa Molhada", "Detergente Roupa"),
-        Map.entry("T-shirt/Camisola", "T-shirt/Camisola"),
-        Map.entry("Calças", "Calças"),
-        Map.entry("Roupa Interior", "Roupa Interior"),
-        Map.entry("Meias", "Meias"),
-        Map.entry("Agasalho/Casaco", "Agasalho/Casaco")
+        Map.entry("Shampoo", VAL_CHAMPO),
+        Map.entry(VAL_CHAMPO, VAL_CHAMPO),
+        Map.entry(VAL_GEL_BANHO, VAL_GEL_BANHO),
+        Map.entry(VAL_TOALHA, VAL_TOALHA),
+        Map.entry(VAL_SABONETE_CREME, VAL_SABONETE_CREME),
+        Map.entry(VAL_LAVAR_SECA, VAL_DETERGENTE),
+        Map.entry(VAL_LAVAR_MOLHADA, VAL_DETERGENTE),
+        Map.entry(VAL_TSHIRT, VAL_TSHIRT),
+        Map.entry(VAL_CALCAS, VAL_CALCAS),
+        Map.entry(VAL_ROUPA_INTERIOR, VAL_ROUPA_INTERIOR),
+        Map.entry(VAL_MEIAS, VAL_MEIAS),
+        Map.entry(VAL_AGASALHO, VAL_AGASALHO)
     );
 
     /**
      * Mapeia a categoria do formulário para a categoria do armazém.
      */
     private static final Map<String, String> FORM_TO_CATEGORIA = Map.ofEntries(
-        Map.entry("Shampoo", "HIGIENE"),
-        Map.entry("Champô", "HIGIENE"),
-        Map.entry("Gel de Banho", "HIGIENE"),
-        Map.entry("Toalha", "HIGIENE"),
-        Map.entry("Sabonete/Creme", "HIGIENE"),
-        Map.entry("Lixívia", "DETERGENTES"),
-        Map.entry("Amaciador", "DETERGENTES"),
-        Map.entry("Detergente Chão", "DETERGENTES"),
-        Map.entry("Lavar Roupa Seca", "DETERGENTES"),
-        Map.entry("Lavar Roupa Molhada", "DETERGENTES"),
-        Map.entry("Roupa Interior", "VESTUARIO"),
-        Map.entry("Meias", "VESTUARIO"),
-        Map.entry("Agasalho/Casaco", "VESTUARIO")
+        Map.entry("Shampoo", CAT_HIGIENE),
+        Map.entry(VAL_CHAMPO, CAT_HIGIENE),
+        Map.entry(VAL_GEL_BANHO, CAT_HIGIENE),
+        Map.entry(VAL_TOALHA, CAT_HIGIENE),
+        Map.entry(VAL_SABONETE_CREME, CAT_HIGIENE),
+        Map.entry("Lixívia", CAT_DETERGENTES),
+        Map.entry("Amaciador", CAT_DETERGENTES),
+        Map.entry("Detergente Chão", CAT_DETERGENTES),
+        Map.entry(VAL_LAVAR_SECA, CAT_DETERGENTES),
+        Map.entry(VAL_LAVAR_MOLHADA, CAT_DETERGENTES),
+        Map.entry(VAL_ROUPA_INTERIOR, CAT_VESTUARIO),
+        Map.entry(VAL_MEIAS, CAT_VESTUARIO),
+        Map.entry(VAL_AGASALHO, CAT_VESTUARIO)
     );
 
     // =====================================================================
@@ -101,7 +127,7 @@ public class ArmazemService {
         return itemArmazemRepository.findAllByOrderByCategoriaAscNomeAsc()
             .stream()
             .map(this::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -111,7 +137,7 @@ public class ArmazemService {
         return itemArmazemRepository.findByCategoria(categoria)
             .stream()
             .map(this::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -138,7 +164,7 @@ public class ArmazemService {
         item.setNome(nomeNorm);
         item.setQuantidade(dto.getQuantidade() != null ? Math.max(0, dto.getQuantidade()) : 0);
         item.setQuantidadeMinima(dto.getQuantidadeMinima() != null ? Math.max(0, dto.getQuantidadeMinima()) : 0);
-        item.setUnidade(dto.getUnidade() != null ? dto.getUnidade() : "un");
+        item.setUnidade(dto.getUnidade() != null ? dto.getUnidade() : UNIT_UN);
         item.setMarca(dto.getMarca());
         item.setTamanho(dto.getTamanho());
         item.setVolume(dto.getVolume());
@@ -262,7 +288,7 @@ public class ArmazemService {
                 if (armazemCategoria != null) {
                     itemOpt = itemArmazemRepository.findByCategoriaAndNome(armazemCategoria, armazemNome);
                 } else {
-                    List<String> managedCats = List.of("HIGIENE", "DETERGENTES", "VESTUARIO", "CALCADO");
+                    List<String> managedCats = List.of(CAT_HIGIENE, CAT_DETERGENTES, CAT_VESTUARIO, CAT_CALCADO);
                     for (String cat : managedCats) {
                         itemOpt = itemArmazemRepository.findByCategoriaAndNome(cat, armazemNome);
                         if (itemOpt.isPresent()) break;
@@ -317,7 +343,7 @@ public class ArmazemService {
 
                 if ("Sapatos/Sapatilhas".equals(formCategoria)) {
                     armazemNome = roupa.getTamanho();
-                    armazemCategoria = "CALCADO";
+                    armazemCategoria = CAT_CALCADO;
                 } else {
                     armazemNome = FORM_TO_ARMAZEM.get(formCategoria);
                 }
@@ -327,7 +353,7 @@ public class ArmazemService {
                 if (armazemCategoria != null) {
                     itemOpt = itemArmazemRepository.findByCategoriaAndNome(armazemCategoria, armazemNome);
                 } else {
-                    List<String> managedCats = List.of("HIGIENE", "DETERGENTES", "VESTUARIO", "CALCADO");
+                    List<String> managedCats = List.of(CAT_HIGIENE, CAT_DETERGENTES, CAT_VESTUARIO, CAT_CALCADO);
                     for (String cat : managedCats) {
                         itemOpt = itemArmazemRepository.findByCategoriaAndNome(cat, armazemNome);
                         if (itemOpt.isPresent()) break;
@@ -364,23 +390,23 @@ public class ArmazemService {
 
             if (armazemNome == null || armazemCategoria == null) {
                 // Sem mapeamento: não trackado no armazém
-                resultado.put(formItem, Map.of("tracked", false));
+                resultado.put(formItem, Map.of(KEY_TRACKED, false));
                 continue;
             }
 
             Optional<ItemArmazem> itemOpt = itemArmazemRepository.findByCategoriaAndNome(armazemCategoria, armazemNome);
             if (itemOpt.isPresent()) {
                 ItemArmazem item = itemOpt.get();
-                String estado = item.getQuantidade() >= item.getQuantidadeMinima() ? "OK" : "BAIXO";
+                String estado = item.getQuantidade() >= item.getQuantidadeMinima() ? STATUS_OK : STATUS_BAIXO;
                 resultado.put(formItem, Map.of(
-                    "tracked", true,
+                    KEY_TRACKED, true,
                     "quantidade", item.getQuantidade(),
                     "quantidadeMinima", item.getQuantidadeMinima(),
                     "estado", estado,
                     "esgotado", item.getQuantidade() <= 0
                 ));
             } else {
-                resultado.put(formItem, Map.of("tracked", false));
+                resultado.put(formItem, Map.of(KEY_TRACKED, false));
             }
         }
 
@@ -394,19 +420,19 @@ public class ArmazemService {
         Map<String, Map<String, Object>> resultado = new LinkedHashMap<>();
 
         for (String tamanho : tamanhos) {
-            Optional<ItemArmazem> itemOpt = itemArmazemRepository.findByCategoriaAndNome("CALCADO", tamanho);
+            Optional<ItemArmazem> itemOpt = itemArmazemRepository.findByCategoriaAndNome(CAT_CALCADO, tamanho);
             if (itemOpt.isPresent()) {
                 ItemArmazem item = itemOpt.get();
-                String estado = item.getQuantidade() >= item.getQuantidadeMinima() ? "OK" : "BAIXO";
+                String estado = item.getQuantidade() >= item.getQuantidadeMinima() ? STATUS_OK : STATUS_BAIXO;
                 resultado.put(tamanho, Map.of(
-                    "tracked", true,
+                    KEY_TRACKED, true,
                     "quantidade", item.getQuantidade(),
                     "quantidadeMinima", item.getQuantidadeMinima(),
                     "estado", estado,
                     "esgotado", item.getQuantidade() <= 0
                 ));
             } else {
-                resultado.put(tamanho, Map.of("tracked", false));
+                resultado.put(tamanho, Map.of(KEY_TRACKED, false));
             }
         }
 
@@ -427,7 +453,7 @@ public class ArmazemService {
     public ConsumoEstatisticaDTO obterEstatisticas(String periodo) {
         LocalDateTime agora = LocalDateTime.now();
         LocalDateTime inicio;
-        LocalDateTime fim = agora.plusYears(10); // Incluir marcações futuras já concluídas
+        LocalDateTime fim; // Definido nas branches do switch
 
         switch (periodo.toUpperCase()) {
             case "DIA":
@@ -521,29 +547,29 @@ public class ArmazemService {
         log.info("A inicializar dados padrão do armazém...");
 
         // Detergentes
-        criarItemSeNaoExiste("DETERGENTES", "Amaciador", 20, 5, "L", "Florinhas", null, 5.0, "Amaciador de roupa");
-        criarItemSeNaoExiste("DETERGENTES", "Lixívia", 10, 5, "L", "Domestos", null, 2.0, "Lixívia desinfetante");
-        criarItemSeNaoExiste("DETERGENTES", "Detergente Chão", 15, 8, "L", "Ajax", null, 5.0, "Detergente para o chão");
-        criarItemSeNaoExiste("DETERGENTES", "Detergente Roupa", 50, 10, "L", "Florinhas", null, 10.0, "Detergente para a roupa");
+        criarItemSeNaoExiste(CAT_DETERGENTES, "Amaciador", 20, 5, UNIT_L, "Florinhas", null, 5.0, "Amaciador de roupa");
+        criarItemSeNaoExiste(CAT_DETERGENTES, "Lixívia", 10, 5, UNIT_L, "Domestos", null, 2.0, "Lixívia desinfetante");
+        criarItemSeNaoExiste(CAT_DETERGENTES, "Detergente Chão", 15, 8, UNIT_L, "Ajax", null, 5.0, "Detergente para o chão");
+        criarItemSeNaoExiste(CAT_DETERGENTES, VAL_DETERGENTE, 50, 10, UNIT_L, "Florinhas", null, 10.0, "Detergente para a roupa");
 
         // Higiene
-        criarItemSeNaoExiste("HIGIENE", "Sabonete Líquido", 100, 15, "un", "Nivea", null, 0.5, "Sabonete para mãos");
-        criarItemSeNaoExiste("HIGIENE", "Champô", 40, 8, "un", "Garnier", null, 0.4, "Champô para cabelo");
-        criarItemSeNaoExiste("HIGIENE", "Gel de Banho", 40, 10, "un", "Dove", null, 0.5, "Gel de banho hidratante");
-        criarItemSeNaoExiste("HIGIENE", "Toalha", 100, 20, "un", "Standard", null, null, "Toalha de banho branca");
-        criarItemSeNaoExiste("HIGIENE", "Sabonete/Creme", 50, 15, "un", "Dove", null, null, "Sabonete em barra ou creme");
-        criarItemSeNaoExiste("HIGIENE", "Toalhetes", 60, 30, "pk", "Dodot", null, null, "Toalhetes de limpeza");
+        criarItemSeNaoExiste(CAT_HIGIENE, "Sabonete Líquido", 100, 15, UNIT_UN, "Nivea", null, 0.5, "Sabonete para mãos");
+        criarItemSeNaoExiste(CAT_HIGIENE, VAL_CHAMPO, 40, 8, UNIT_UN, "Garnier", null, 0.4, "Champô para cabelo");
+        criarItemSeNaoExiste(CAT_HIGIENE, VAL_GEL_BANHO, 40, 10, UNIT_UN, "Dove", null, 0.5, "Gel de banho hidratante");
+        criarItemSeNaoExiste(CAT_HIGIENE, VAL_TOALHA, 100, 20, UNIT_UN, BRAND_STANDARD, null, null, "Toalha de banho branca");
+        criarItemSeNaoExiste(CAT_HIGIENE, VAL_SABONETE_CREME, 50, 15, UNIT_UN, "Dove", null, null, "Sabonete em barra ou creme");
+        criarItemSeNaoExiste(CAT_HIGIENE, "Toalhetes", 60, 30, "pk", "Dodot", null, null, "Toalhetes de limpeza");
 
         // Vestuário
-        criarItemSeNaoExiste("VESTUARIO", "T-shirt/Camisola", 20, 10, "un", "Generative", "M", null, "T-shirt básica");
-        criarItemSeNaoExiste("VESTUARIO", "Calças", 15, 10, "un", "Generative", "L", null, "Calças confortáveis");
-        criarItemSeNaoExiste("VESTUARIO", "Roupa Interior", 40, 20, "un", "Generative", "M", null, "Boxers/Cuecas");
-        criarItemSeNaoExiste("VESTUARIO", "Meias", 50, 20, "pares", "Generative", "39-42", null, "Meias de algodão");
-        criarItemSeNaoExiste("VESTUARIO", "Agasalho/Casaco", 10, 5, "un", "Generative", "XL", null, "Casaco de inverno");
+        criarItemSeNaoExiste(CAT_VESTUARIO, VAL_TSHIRT, 20, 10, UNIT_UN, BRAND_GENERATIVE, "M", null, "T-shirt básica");
+        criarItemSeNaoExiste(CAT_VESTUARIO, VAL_CALCAS, 15, 10, UNIT_UN, BRAND_GENERATIVE, "L", null, "Calças confortáveis");
+        criarItemSeNaoExiste(CAT_VESTUARIO, VAL_ROUPA_INTERIOR, 40, 20, UNIT_UN, BRAND_GENERATIVE, "M", null, "Boxers/Cuecas");
+        criarItemSeNaoExiste(CAT_VESTUARIO, VAL_MEIAS, 50, 20, UNIT_PARES, BRAND_GENERATIVE, "39-42", null, "Meias de algodão");
+        criarItemSeNaoExiste(CAT_VESTUARIO, VAL_AGASALHO, 10, 5, UNIT_UN, BRAND_GENERATIVE, "XL", null, "Casaco de inverno");
 
         // Calçado (tamanhos 35 a 46)
         for (int tamanho = 35; tamanho <= 46; tamanho++) {
-            criarItemSeNaoExiste("CALCADO", String.valueOf(tamanho), 10, 3, "pares", "Standard", String.valueOf(tamanho), null, "Sapatos tamanho " + tamanho);
+            criarItemSeNaoExiste(CAT_CALCADO, String.valueOf(tamanho), 10, 3, UNIT_PARES, BRAND_STANDARD, String.valueOf(tamanho), null, "Sapatos tamanho " + tamanho);
         }
 
         log.info("Dados padrão do armazém inicializados com sucesso.");
@@ -584,7 +610,7 @@ public class ArmazemService {
         dto.setTamanho(item.getTamanho());
         dto.setVolume(item.getVolume());
         dto.setDescricao(item.getDescricao());
-        dto.setEstado(item.getQuantidade() >= item.getQuantidadeMinima() ? "OK" : "BAIXO");
+        dto.setEstado(item.getQuantidade() >= item.getQuantidadeMinima() ? STATUS_OK : STATUS_BAIXO);
         return dto;
     }
 }
